@@ -1,3 +1,4 @@
+	- Shots can no longer go through solid parts
 	- Added ACME stone
 	- Added Manpage
 	- Implemented mines
